--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -21,6 +21,7 @@ html,
 body {
   background-color: theme.$surface;
   color: theme.$on-surface;
+  font-family: 'Roboto';
 }
 
 header.mdc-top-app-bar {
