ajout vue confirmation envoi, envoi des donnée dans la base

--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -28,6 +28,10 @@ header.mdc-top-app-bar {
   position: unset;
 }
 
+:not(header.mdc-top-app-bar) {
+  text-align: center;
+}
+
 a {
   color: #40b3ff;
 }
